--- a/src/main/resources/templates/itns/edit-itn.html
+++ b/src/main/resources/templates/itns/edit-itn.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Edit ITN</title>
-    <link rel="stylesheet" type="text/css" href="/styles.css">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
 <h1>Edit ITN</h1>
@@ -14,7 +14,7 @@
             data-required="true"
             data-error="Subject is required."
     />
-    <span th:if="${#fields.hasErrors('subject')}" th:errors="*{subject}" class="error"></span>
+    <span th:if="${subjectErr}" th:text="${subjectErr}" class="error"></span>
     <br />
 
     <label>Description:</label>
@@ -24,17 +24,19 @@
             data-required="true"
             data-error="Description is required."
     />
-    <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="error"></span>
+    <span th:if="${descriptionErr}" th:text="${descriptionErr}" class="error"></span>
     <br />
 
     <label>Status:</label>
     <select th:field="*{status}" data-required="true" data-error="Status is required.">
         <option value="">--Select--</option>
-        <option th:each="status : ${T(v.yeikovych.tinprojectsp.model.ItnStatus).values()}"
+        <option th:each="status : ${T(v.yeikovych.tinprojectsp.model.itn.ItnStatus).values()}"
                 th:value="${status}"
                 th:text="${status}"></option>
     </select>
-    <span th:if="${#fields.hasErrors('status')}" th:errors="*{status}" class="error"></span>
+    <br />
+    <span th:if="${statusErr}" th:text="${statusErr}" class="error"></span>
+    <br />
 
     <label>Date Issued:</label>
     <input
@@ -43,12 +45,12 @@
             data-required="true"
             data-error="Date issued cannot be empty."
     />
-    <span th:if="${#fields.hasErrors('dateIssued')}" th:errors="*{dateIssued}" class="error"></span>
+    <span th:if="${dateIssuedErr}" th:text="${dateIssuedErr}" class="error"></span>
     <br />
 
     <button type="submit">Save</button>
     <button class="back-button" type="button" onclick="location.href='/itns'">Back</button>
 </form>
-<script src="/validation.js"></script>
+<script src="/js/validation.js"></script>
 </body>
 </html>
