--- a/src/main/resources/templates/itns/new-itn.html
+++ b/src/main/resources/templates/itns/new-itn.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>New ITN</title>
-    <link rel="stylesheet" type="text/css" href="/styles.css">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
 <h1>Add New ITN</h1>
@@ -14,7 +14,7 @@
             data-required="true"
             data-error="Subject is required."
     />
-    <span th:if="${#fields.hasErrors('subject')}" th:errors="*{subject}" class="error"></span>
+    <span th:if="${subjectErr}" th:text="${subjectErr}" class="error"></span>
     <br />
 
     <label>Description:</label>
@@ -24,18 +24,41 @@
             data-required="true"
             data-error="Description is required."
     />
-    <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="error"></span>
+    <span th:if="${descriptionErr}" th:text="${descriptionErr}" class="error"></span>
+    <br />
+
+    <label>Student to Award:</label>
+    <select th:field="*{studentEmail}" data-required="true" data-error="Student to award is required.">
+        <option value="">--Select--</option>
+        <option th:each="studentEmail : ${studentEmails}"
+                th:value="${studentEmail}"
+                th:text="${studentEmail}"></option>
+    </select>
+    <br />
+    <span th:if="${studentEmailErr}" th:text="${studentEmailErr}" class="error"></span>
+    <br />
+
+    <label>Teacher who Awarded:</label>
+    <select th:field="*{teacherEmail}" data-required="true" data-error="Teacher who awarded is required.">
+        <option value="">--Select--</option>
+        <option th:each="teacherEmail : ${teacherEmails}"
+                th:value="${teacherEmail}"
+                th:text="${teacherEmail}"></option>
+    </select>
+    <br />
+    <span th:if="${teacherEmailErr}" th:text="${teacherEmailErr}" class="error"></span>
     <br />
 
     <label>Status:</label>
     <select th:field="*{status}" data-required="true" data-error="Status is required.">
         <option value="">--Select--</option>
-        <option th:each="status : ${T(v.yeikovych.tinprojectsp.model.ItnStatus).values()}"
+        <option th:each="status : ${T(v.yeikovych.tinprojectsp.model.itn.ItnStatus).values()}"
                 th:value="${status}"
                 th:text="${status}"></option>
     </select>
-    <span th:if="${#fields.hasErrors('status')}" th:errors="*{status}" class="error"></span>
-
+    <br />
+    <span th:if="${statusErr}" th:text="${statusErr}" class="error"></span>
+    <br />
 
     <label>Date Issued:</label>
     <input
@@ -44,12 +67,12 @@
             data-required="true"
             data-error="Date issued cannot be empty."
     />
-    <span th:if="${#fields.hasErrors('dateIssued')}" th:errors="*{dateIssued}" class="error"></span>
+    <span th:if="${dateIssuedErr}" th:text="${dateIssuedErr}" class="error"></span>
     <br />
 
     <button type="submit">Add</button>
     <button class="back-button" type="button" onclick="location.href='/itns'">Back</button>
 </form>
-<script src="/validation.js"></script>
+<script src="/js/validation.js"></script>
 </body>
 </html>
