--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,4 +1,3 @@
-/* General Styles */
 body {
     margin: 0;
     padding: 0;
@@ -23,7 +22,6 @@ a:hover {
     color: #0077cc;
 }
 
-/* Buttons */
 button,
 .cancel-button,
 .logout-button,
@@ -83,7 +81,6 @@ button:hover {
     background-color: #011627;
 }
 
-/* Forms */
 form {
     width: 60%;
     margin: 0 auto 20px auto;
@@ -122,7 +119,6 @@ input::placeholder {
     color: #bbb;
 }
 
-/* Tables */
 table {
     width: 90%;
     margin: 20px auto;
@@ -156,7 +152,6 @@ table th {
     font-weight: bold;
 }
 
-/* Navigation Links */
 .nav-links {
     text-align: center;
     margin: 20px 0;
@@ -176,7 +171,6 @@ table th {
     color: #0056b3;
 }
 
-/* Error Styles */
 .error {
     color: red;
     font-size: 0.9em;
@@ -193,7 +187,6 @@ table th {
     margin-top: 10px;
 }
 
-/* Logout Page */
 .logout-page,
 .container {
     display: flex;
@@ -224,7 +217,6 @@ table th {
     justify-content: center;
 }
 
-/* Login Form */
 .login-form h2 {
     text-align: center;
     margin-bottom: 30px;
@@ -283,34 +275,31 @@ table th {
     margin-right: 30px;
 }
 
-/* Container for stacked buttons */
 .button-container {
     display: flex;
-    flex-direction: column; /* Stack buttons vertically */
-    align-items: center; /* Center buttons horizontally */
-    gap: 10px; /* Space between buttons */
-    position: absolute; /* Center the container */
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 80%; /* Ensure the buttons take 80% width of the page */
+    width: 80%;
 }
 
-/* Button styling */
 .nav-button {
-    width: 100%; /* Full width of the container */
-    padding: 15px 0; /* Adjust padding for height */
-    background-color: orange; /* Orange background */
-    color: white; /* White text */
+    width: 100%;
+    padding: 15px 0;
+    background-color: orange;
+    color: white;
     text-align: center;
-    border: none; /* Remove border */
-    border-radius: 5px; /* Rounded corners */
-    font-size: 1.5em; /* Larger text for emphasis */
-    cursor: pointer; /* Pointer cursor on hover */
-    transition: background-color 0.3s ease; /* Smooth hover effect */
+    border: none;
+    border-radius: 5px;
+    font-size: 1.5em;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
-/* Hover effect */
 .nav-button:hover {
-    background-color: red; /* Change background to red */
+    background-color: red;
 }
